--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
     <title>Luvano Colonial</title>
 </head>
 <body>
+    <section class="background" id="background0">
+        <div id="redes-sociais-topo">
+            <a href="#localizacao"><img class="img-topo" src="img/envelope.png" alt=""></a>
+            <a href="https://www.instagram.com/luvanoescovas/" target="_blank"><img class="img-topo" src="img/instagram.png" alt=""></a>
+            <a href="https://wa.me/5551992850853?text=Quero%20mais%20informa%C3%A7%C3%B5es%20sobre..." target="_blank"><img class="img-topo" src="img/whatsapp.png" alt=""></a>
+            <a href="https://www.linkedin.com/company/luvano-ind%C3%BAstria-de-vassoura-e-escovas-ltda/?originalSubdomain=br" target="_blank"><img class="img-topo" src="img/linkedin.png" alt=""></a>
+        </div>
+    </section>
     <section class="background" id="background1">
         <div class="estrutura" id="estrutura1">
             <div id="logo-section">
@@ -78,20 +86,28 @@
     <section class="background" id="background4">
         <div class="estrutura" id="estrutura4">
             <div class="quadros">
-                <img id="quadros-on" src="img/prods/luv_quadr1off.png" alt="">
-                <img id="quadros-off" src="img/prods/luv_quadr1on.png" alt="">
+                <a href="produtos.html">
+                    <img id="quadros-on" src="img/prods/luv_quadr1off.png" alt="">
+                    <img id="quadros-off" src="img/prods/luv_quadr1on.png" alt="">
+                </a>
             </div>
             <div class="quadros">
-                <img id="quadros-on" src="img/prods/luv_quadr2off.png" alt="">
-                <img id="quadros-off" src="img/prods/luv_quadr2on.png" alt="">
+                <a href="produtos.html#local-linha-domestica">
+                    <img id="quadros-on" src="img/prods/luv_quadr2off.png" alt="">
+                    <img id="quadros-off" src="img/prods/luv_quadr2on.png" alt="">
+                </a>
             </div>
             <div class="quadros">
-                <img id="quadros-on" src="img/prods/luv_quadr3off.png" alt="">
-                <img id="quadros-off" src="img/prods/luv_quadr3on.png" alt="">
+                <a href="#local-recondicionamento">
+                    <img id="quadros-on" src="img/prods/luv_quadr3off.png" alt="">
+                    <img id="quadros-off" src="img/prods/luv_quadr3on.png" alt="">
+                </a>
             </div>
             <div class="quadros">
-                <img id="quadros-on" src="img/prods/luv_quadr4off.png" alt="">
-                <img id="quadros-off" src="img/prods/luv_quadr4on.png" alt="">
+                <a href="produtos.html#local-linha-domestica">
+                    <img id="quadros-on" src="img/prods/luv_quadr4off.png" alt="">
+                    <img id="quadros-off" src="img/prods/luv_quadr4on.png" alt="">
+                </a>
             </div>
         </div>
     </section>
@@ -122,12 +138,13 @@
     </section>
     <section class="background" id="background6">
         <div class="estrutura" id="estrutura6">
+            <div id="local-recondicionamento"></div>
             <div id="recondicionamento">
                 <div id="recon-titulo">
                     <div class="titulos">
                         <img class="logo-titulo" src="img/luvano_icon.png" alt=""><h3 id="tit-back6">Recondicionamento</h3>
                     </div>
-                    <p>
+                    <p class="txt-padrao">
                         Além da fabricação de materiais de alta qualidade,
                         recondicionamos vassouras e escovas industriais dos mais
                         variados tipos, inclusive as produzidas por outros
@@ -161,12 +178,6 @@
                         <a class="a-contato" href="#">
                             <img src="img/instagram-grey.png" alt="">
                             <h6>@luvanoescovas</h6>
-                        </a>
-                    </span>
-                    <span class="listing-fale-conosco">
-                        <a class="a-contato" href="#">
-                            <img src="img/facebook-grey.png" alt="">
-                            <h6>Luvano</h6>
                         </a>
                     </span>
                     <span class="listing-fale-conosco">
@@ -215,9 +226,9 @@
                 <div id="footer-logo-rs">
                     <img id="logo-footer" src="img/luvanocolonial_logo.png" alt="">
                     <span id="footer-redes-sociais">
-                        <a href="#"><img src="img/instagram.png" alt=""></a>
-                        <a href="#"><img src="img/linkedin.png" alt=""></a>
-                        <a href="https://wa.me/5551992850853?text=Quero%20mais%20informa%C3%A7%C3%B5es%20sobre..."><img src="img/whatsapp.png" alt=""></a>
+                        <a href="https://www.instagram.com/luvanoescovas/" target="_blank"><img src="img/instagram.png" alt=""></a>
+                        <a href="https://www.linkedin.com/company/luvano-ind%C3%BAstria-de-vassoura-e-escovas-ltda/?originalSubdomain=br" target="_blank"><img src="img/linkedin.png" alt=""></a>
+                        <a href="https://wa.me/5551992850853?text=Quero%20mais%20informa%C3%A7%C3%B5es%20sobre..." target="_blank"><img src="img/whatsapp.png" alt=""></a>
                     </span>
                 </div>
                 <div>
