--- a/nossa-historia.html
+++ b/nossa-historia.html
@@ -10,6 +10,14 @@
     <title>Luvano Colonial</title>
 </head>
 <body>
+    <section class="background" id="background0">
+        <div id="redes-sociais-topo">
+            <a href="#localizacao"><img class="img-topo" src="img/envelope.png" alt=""></a>
+            <a href="https://www.instagram.com/luvanoescovas/" target="_blank"><img class="img-topo" src="img/instagram.png" alt=""></a>
+            <a href="https://wa.me/5551992850853?text=Quero%20mais%20informa%C3%A7%C3%B5es%20sobre..." target="_blank"><img class="img-topo" src="img/whatsapp.png" alt=""></a>
+            <a href="https://www.linkedin.com/company/luvano-ind%C3%BAstria-de-vassoura-e-escovas-ltda/?originalSubdomain=br" target="_blank"><img class="img-topo" src="img/linkedin.png" alt=""></a>
+        </div>
+    </section>
     <section class="background" id="background1">
         <div class="estrutura" id="estrutura1">
             <div id="logo-section">
@@ -24,8 +32,8 @@
                         <li><a class="li-branco" href="index.html">Home</a></li>
                         <li><a class="li-laranja" href="nossa-historia.html">Empresa</a></li>
                         <li><a class="li-branco" href="produtos.html">Produtos</a></li>
-                        <li><a class="li-laranja" href="#localizacao">Localização</a></li>
-                        <li><a class="li-branco" href="#localizacao">Contato</a></li>
+                        <li><a class="li-laranja" href="index.html#localizacao">Localização</a></li>
+                        <li><a class="li-branco" href="index.html#localizacao">Contato</a></li>
                     </ul>
                 </nav>
                 <div id="banner-h2">
@@ -130,9 +138,9 @@
                 <div id="footer-logo-rs">
                     <img id="logo-footer" src="img/luvanocolonial_logo.png" alt="">
                     <span id="footer-redes-sociais">
-                        <a href="#"><img src="img/instagram.png" alt=""></a>
-                        <a href="#"><img src="img/linkedin.png" alt=""></a>
-                        <a href="https://wa.me/5551992850853?text=Quero%20mais%20informa%C3%A7%C3%B5es%20sobre..."><img src="img/whatsapp.png" alt=""></a>
+                        <a href="https://www.instagram.com/luvanoescovas/" target="_blank"><img src="img/instagram.png" alt=""></a>
+                        <a href="https://www.linkedin.com/company/luvano-ind%C3%BAstria-de-vassoura-e-escovas-ltda/?originalSubdomain=br" target="_blank"><img src="img/linkedin.png" alt=""></a>
+                        <a href="https://wa.me/5551992850853?text=Quero%20mais%20informa%C3%A7%C3%B5es%20sobre..." target="_blank"><img src="img/whatsapp.png" alt=""></a>
                     </span>
                 </div>
                 <div>
