--- a/produtos.html
+++ b/produtos.html
@@ -10,6 +10,14 @@
     <title>Luvano Colonial</title>
 </head>
 <body>
+    <section class="background" id="background0">
+        <div id="redes-sociais-topo">
+            <a href="#localizacao"><img class="img-topo" src="img/envelope.png" alt=""></a>
+            <a href="https://www.instagram.com/luvanoescovas/" target="_blank"><img class="img-topo" src="img/instagram.png" alt=""></a>
+            <a href="https://wa.me/5551992850853?text=Quero%20mais%20informa%C3%A7%C3%B5es%20sobre..." target="_blank"><img class="img-topo" src="img/whatsapp.png" alt=""></a>
+            <a href="https://www.linkedin.com/company/luvano-ind%C3%BAstria-de-vassoura-e-escovas-ltda/?originalSubdomain=br" target="_blank"><img class="img-topo" src="img/linkedin.png" alt=""></a>
+        </div>
+    </section>
     <section class="background" id="background1">
         <div class="estrutura" id="estrutura1">
             <div id="logo-section">
@@ -24,8 +32,8 @@
                         <li><a class="li-branco" href="index.html">Home</a></li>
                         <li><a class="li-laranja" href="nossa-historia.html">Empresa</a></li>
                         <li><a class="li-branco" href="produtos.html">Produtos</a></li>
-                        <li><a class="li-laranja" href="#localizacao">Localização</a></li>
-                        <li><a class="li-branco" href="#localizacao">Contato</a></li>
+                        <li><a class="li-laranja" href="index.html#localizacao">Localização</a></li>
+                        <li><a class="li-branco" href="index.html#localizacao">Contato</a></li>
                     </ul>
                 </nav>
                 <div id="banner-h2">
@@ -45,7 +53,7 @@
     <section class="background" id="background1-produtos">
         <div class="estrutura" id="estrutura1-produtos">
             <div class="titulos">
-                <img class="logo-titulo" src="img/luvano_icon.png" alt=""><h3>Linhda Industrial</h3>
+                <img class="logo-titulo" src="img/luvano_icon.png" alt=""><h3>Linha Industrial</h3>
             </div>
             <p class="txt-padrao" style="margin-top: 20px;">
                 Nossa extensa linha de produtos é desenvolvida para atender às mais diversas necessidades
@@ -126,8 +134,9 @@
     </section>
     <section class="background" id="background4-produtos">
         <div class="estrutura" id="estrutura4-produtos">
+            <div id="local-linha-domestica"></div>
             <div class="titulos">
-                <img class="logo-titulo" src="img/luvano_icon.png" alt=""><h3>Linhda Doméstica</h3>
+                <img class="logo-titulo" src="img/luvano_icon.png" alt=""><h3>Linha Doméstica</h3>
             </div>
             <p class="txt-padrao" style="margin-top: 20px;">
                 As escovas, vassouras e outros utensílios de limpeza são essenciais tanto para residências
@@ -136,6 +145,9 @@
                 sujidades, proporcionando eficiência na remoção de poeira, resíduos e sujeiras acumuladas.
             </p>
             <img style="width: 200px; margin-top: 50px;" src="img/fnd.png" alt="">
+            <img style="width: 200px; margin-top: 50px;" src="img/fnd.png" alt="">
+            <img style="width: 200px; margin-top: 50px;" src="img/fnd.png" alt="">
+            <img style="width: 200px; margin-top: 50px;" src="img/fnd.png" alt="">
         </div>
     </section>
     <section class="background" id="background5-produtos">
@@ -143,7 +155,7 @@
             <img id="img-projetos-especiais" src="img/luvano_project.png" alt="">
             <div id="projetos-especiais">
                 <div class="titulos">
-                    <img class="logo-titulo" src="img/luvano_icon.png" alt=""><h3>Proejtos Especiais</h3>
+                    <img class="logo-titulo" src="img/luvano_icon.png" alt=""><h3>Projetos Especiais</h3>
                 </div>
                 <p class="txt-padrao" style="margin-top: 20px;">
                     A <strong>LUVANO COLONIAL</strong> produz sob medida, qualquer
@@ -166,9 +178,9 @@
                 <div id="footer-logo-rs">
                     <img id="logo-footer" src="img/luvanocolonial_logo.png" alt="">
                     <span id="footer-redes-sociais">
-                        <a href="#"><img src="img/instagram.png" alt=""></a>
-                        <a href="#"><img src="img/linkedin.png" alt=""></a>
-                        <a href="https://wa.me/5551992850853?text=Quero%20mais%20informa%C3%A7%C3%B5es%20sobre..."><img src="img/whatsapp.png" alt=""></a>
+                        <a href="https://www.instagram.com/luvanoescovas/" target="_blank"><img src="img/instagram.png" alt=""></a>
+                        <a href="https://www.linkedin.com/company/luvano-ind%C3%BAstria-de-vassoura-e-escovas-ltda/?originalSubdomain=br" target="_blank"><img src="img/linkedin.png" alt=""></a>
+                        <a href="https://wa.me/5551992850853?text=Quero%20mais%20informa%C3%A7%C3%B5es%20sobre..." target="_blank"><img src="img/whatsapp.png" alt=""></a>
                     </span>
                 </div>
                 <div>
