--- a/resposta.html
+++ b/resposta.html
@@ -49,6 +49,14 @@
     }
 </style>
 <body>
+    <section class="background" id="background0">
+        <div id="redes-sociais-topo">
+            <a href="#localizacao"><img class="img-topo" src="img/envelope.png" alt=""></a>
+            <a href="https://www.instagram.com/luvanoescovas/" target="_blank"><img class="img-topo" src="img/instagram.png" alt=""></a>
+            <a href="https://wa.me/5551992850853?text=Quero%20mais%20informa%C3%A7%C3%B5es%20sobre..." target="_blank"><img class="img-topo" src="img/whatsapp.png" alt=""></a>
+            <a href="https://www.linkedin.com/company/luvano-ind%C3%BAstria-de-vassoura-e-escovas-ltda/?originalSubdomain=br" target="_blank"><img class="img-topo" src="img/linkedin.png" alt=""></a>
+        </div>
+    </section>
     <img src="img/luvanocolonial_logo.png" alt="">
     <h1>Mensagem enviada com sucesso!</h1>
     <button><a href="index.html">Voltar a página inicial</a></button>
